<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:shadowColor="#414141"
            android:shadowDx="6.0"
            android:shadowDy="6.0"
            android:shadowRadius="6"
            android:text="@string/logo"
            android:textColor="#ffffff"
            android:textSize="60sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/frm_school"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/form_padding_space"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginTop="@dimen/form_padding_space"
            android:layout_marginEnd="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:layout_marginBottom="5dp"
            android:background="@color/bluedark"

            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableStart="@drawable/register"
                android:gravity="center"
                android:text="@string/registerschool"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/frm_user"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/form_padding_space"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginEnd="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:layout_marginBottom="5dp"
            android:background="@color/bluedark"

            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableStart="@drawable/register"
                android:gravity="center"
                android:text="@string/registeruser"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/form_padding_space15"
            android:background="@null"

            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>