<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/mainLayout"
    android:layout_height="match_parent">



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/banner">

        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:src="@drawable/logo_app"
            app:layout_constraintTop_toBottomOf="@id/img"
            android:text="LUSGO"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_email"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/form_padding_space"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginEnd="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:background="@null"
            android:layout_marginTop="100dp"

            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent">

        </androidx.appcompat.widget.AppCompatEditText>

        <View
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:background="@color/gray">


        </View>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_pass"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/form_padding_space"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginEnd="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:layout_marginTop="20dp"

            android:background="@null"
            android:hint="@string/text_pass"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent">


        </androidx.appcompat.widget.AppCompatEditText>

        <View
            android:id="@+id/vv"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:background="@color/gray">


        </View>

        <FrameLayout
            android:id="@+id/ff_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginStart="@dimen/form_padding_space"
            android:layout_marginLeft="@dimen/form_padding_space"
            android:layout_marginTop="@dimen/form_padding_space35"
            android:layout_marginEnd="@dimen/form_padding_space"
            android:layout_marginRight="@dimen/form_padding_space"
            android:layout_marginBottom="5dp"
            android:background="@color/bluedark"

            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableLeft="@drawable/login"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:layout_margin="35dp"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/bluebg"
            android:textSize="@dimen/text_size_16sp" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/form_padding_space20"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="bottom|center"
        android:text="@string/info"
        android:layout_marginBottom="30dp"
        android:textColor="@color/bluedark"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>