<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ToolbarTheme">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/logo_app"
                    android:text="LOGGA IN"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/bannerback"
            tools:ignore="NestedWeights" />


        <!--    </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/form_padding_space"
                android:layout_marginLeft="@dimen/form_padding_space"
                android:layout_marginEnd="@dimen/form_padding_space"
                android:layout_marginRight="@dimen/form_padding_space"
                android:background="@null"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:padding="5dp"

                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/v_email"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/form_padding_space"
                android:layout_marginLeft="@dimen/form_padding_space"
                android:layout_marginEnd="@dimen/form_padding_space"
                android:layout_marginRight="@dimen/form_padding_space"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/ll_pwd"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/form_padding_space"
                    android:layout_marginLeft="@dimen/form_padding_space"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="@dimen/form_padding_space"
                    android:layout_marginRight="@dimen/form_padding_space"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/text_pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/eye"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical|bottom"

                    android:layout_marginEnd="30dp"
                    android:src="@drawable/eye2"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/eyehide"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical|bottom"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/eye"
                    android:visibility="visible" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/form_padding_space"
                android:layout_marginLeft="@dimen/form_padding_space"
                android:layout_marginEnd="@dimen/form_padding_space"
                android:layout_marginRight="@dimen/form_padding_space"
                android:background="@color/grey" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/form_padding_space"
                android:layout_marginLeft="@dimen/form_padding_space"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/form_padding_space"
                android:visibility="visible"
                android:layout_marginRight="@dimen/form_padding_space"
                android:background="@drawable/create_button"
                android:gravity="center"
                android:textSize="@dimen/dimen_18sp"
                android:text="Logga in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/form_padding_space"
                android:layout_marginLeft="@dimen/form_padding_space"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/form_padding_space"
                android:layout_marginRight="@dimen/form_padding_space"
                android:background="@drawable/create_button"
                android:gravity="center"
                android:visibility="gone"
                android:text="Logga in med lösenord"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_with_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/form_padding_space"
                android:layout_marginLeft="@dimen/form_padding_space"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/form_padding_space"
                android:layout_marginRight="@dimen/form_padding_space"
                android:background="@drawable/create_button"
                android:gravity="center"
                android:visibility="gone"
                android:text="Logga in med OTP"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/forgot"
                android:textColor="@color/bluebg"
                android:textSize="@dimen/text_size_16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:gravity="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/form_padding_space"
                    android:layout_marginLeft="@dimen/form_padding_space"
                    android:layout_marginTop="@dimen/form_padding_space35"
                    android:layout_marginEnd="@dimen/form_padding_space"
                    android:layout_marginRight="@dimen/form_padding_space"
                    android:background="@color/gray" />


            </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:visibility="gone"

                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/home_b" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/details_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="35dp"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/info_details"

                    android:textColor="@color/bluedark"
                    android:textSize="20sp"
                    android:textStyle="normal" />

            </FrameLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="#177ff0"
            android:textSize="@dimen/text_size_12sp"
            android:textStyle="normal" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@null"
            android:gravity="center"
            android:visibility="invisible"
            android:text="Version :- 2.8"
            android:layout_weight="1.3"
            android:textSize="@dimen/text_size_12sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Datapolicy"
            android:textColor="#177ff0"
            android:textSize="@dimen/text_size_12sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>